Create basic about page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <meta name="description" content="">
+        <title>Jonathan De Moor</title>
+        <meta name="description" content="About Jonathan De Moor">
+        <meta name="author" content="Jonathan De Moor">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Test page</h1>
-        <p>Bacon ipsum dolor amet meatloaf kielbasa prosciutto frankfurter. Fatback swine jerky, frankfurter cupim short loin chicken venison ball tip rump drumstick corned beef. Sirloin strip steak capicola ham hock pork chop bacon chicken spare ribs ball tip beef pastrami picanha alcatra. Salami filet mignon chuck, andouille strip steak swine fatback pork chop cow frankfurter ribeye cupim pork sausage landjaeger. Chuck sausage tri-tip cupim rump ham hock swine jowl venison bresaola kielbasa filet mignon. Doner boudin salami pancetta spare ribs capicola. Venison shankle kielbasa frankfurter pancetta tri-tip.</p>
+        <section class="page">
+          <header>
+            <img src="images/jonathan.png" title="Cat lover">
+            <h1>Jonathan De Moor</h1>
+            <h2>iOS/web developer</h2>
+          </header>
+          <section class="content">
+            <p>
+              Developer with a strong passion for mobile. Minimalist who loves elegant and simple apps.
+              Born in Ghent, Belgium. Currently working at <a href="http://www.inthepocket.mobi" target="_blank">In The Pocket</a>.
+            </p>
+            <ul>
+              <li>Objective-C</li>
+              <li>PHP</li>
+              <li>Node.js</li>
+              <li>HTML5</li>
+              <li>JavaScript</li>
+          </ul>
+          </section>
+          <footer>
+            <p>Get in touch:
+              <a href="mailto:jonathan@flowcaptain.com">Mail</a> -
+              <a href="https://twitter.com/JonathanDeMoor" target="_blank">Twitter</a>
+            </p>
+          </footer>
+        </section>
     </body>
 </html>
