--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Jonathan De Moor</title>
-        <meta name="description" content="About Jonathan De Moor">
+        <title>Jonathan De Moor - iOS/web developer</title>
+        <meta name="description" content="Jonathan De Moor, iOS/web developer with a strong passion for mobile. Minimalist who loves elegant and simple apps.">
         <meta name="author" content="Jonathan De Moor">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
