--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Jonathan De Moor, iOS/web developer with a strong passion for mobile. Minimalist who loves elegant and simple apps.">
         <meta name="author" content="Jonathan De Moor">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="FXoLQJVbBmt6Xn8MvkkLhu6vafJyDUC6H2TX9RFs0L8" />
 
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
 
