--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               Born in Ghent, Belgium. Currently working at <a href="http://www.inthepocket.mobi" target="_blank">In The Pocket</a>.
             </p>
             <ul>
+              <li>Swift</li>
               <li>Objective-C</li>
-              <li>PHP</li>
               <li>Node.js</li>
               <li>HTML5</li>
               <li>JavaScript</li>
