--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <section class="page">
           <header>
-            <img src="images/jonathan.png" title="Cat lover">
+            <img src="images/jonathan.jpg" title="avatar">
             <h1>Jonathan De Moor</h1>
             <h2>iOS/web developer</h2>
           </header>
