Update header and tags

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <header>
             <img src="images/jonathan.jpg" title="avatar">
             <h1>Jonathan De Moor</h1>
-            <h2>iOS/web developer</h2>
+            <h2>Web/iOS developer</h2>
           </header>
           <section class="content">
             <p>
@@ -35,11 +35,14 @@
               Born in Ghent, Belgium. Currently working at <a href="http://www.inthepocket.mobi" target="_blank">In The Pocket</a>.
             </p>
             <ul>
+              <li>Node.js</li>
+              <li>PHP</li>
+              <li>Laravel</li>
               <li>Swift</li>
               <li>Objective-C</li>
-              <li>Node.js</li>
-              <li>HTML5</li>
+              <li>HTML</li>
               <li>JavaScript</li>
+              <li>Backend development</li>
           </ul>
           </section>
           <footer>
